<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_1" />

        <TextView
            style="@style/QuestionBodyTextStyle"
            android:text="@string/question_1_body" />

        <RadioGroup
            android:id="@+id/rgP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/correct1"
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_1_OP1" />

            <RadioButton
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_1_OP2" />

            <RadioButton
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_1_OP3" />

            <RadioButton
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_1_OP4" />

        </RadioGroup>


    </LinearLayout>
</layout>