<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_6" />

        <TextView
            style="@style/QuestionBodyTextStyle"
            android:text="@string/question_6_body" />

        <RadioGroup
            android:id="@+id/rgP6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_6_OP1" />

            <RadioButton
                android:id="@+id/correct6"
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_6_OP2" />

            <RadioButton
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_6_OP3" />

            <RadioButton
                style="@style/QuestionOptionsTextStyle"
                android:text="@string/question_6_OP4" />

        </RadioGroup>

    </LinearLayout>

</layout>