<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                style="@style/IntroTextStyle"
                android:text="@string/intro" />

            <TextView
                style="@style/Intro2TextStyle"
                android:text="@string/intro_2" />


            <include
                android:id="@+id/question_1"
                layout="@layout/question_1"/>

            <include
                android:id="@+id/question_2"
                layout="@layout/question_2"/>

            <include
                android:id="@+id/question_3"
                layout="@layout/question_3"/>

            <include
                android:id="@+id/question_4"
                layout="@layout/question_4"/>

            <include
                android:id="@+id/question_5"
                layout="@layout/question_5"/>

            <include
                android:id="@+id/question_6"
                layout="@layout/question_6"/>

            <include
                android:id="@+id/question_7"
                layout="@layout/question_7"/>

            <include
                android:id="@+id/question_8"
                layout="@layout/question_8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/Submit"
                    android:onClick="submitAnswers" />

                <!--android:onClick="@{(View) -> main."-->


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/Reset"
                    android:onClick="resetAnswers"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>